RESOLVED FIXED253832
[GStreamer] New test media/media-source/media-source-webm-configuration-change.html failing
https://bugs.webkit.org/show_bug.cgi?id=253832
Summary [GStreamer] New test media/media-source/media-source-webm-configuration-chang...
Jer Noble
Reported 2023-03-13 09:01:08 PDT
A test added by https://github.com/WebKit/WebKit/pull/11416 will fail on GTK bots. The test validates that a VideoTrack's TrackConfiguration will update as new media with different codec parameters is appended. From the test results, it appears that the second video's codec configuration isn't being parsed correctly (EXPECTED ('vp09.02.10.10.01.09.16.09.01'), OBSERVED 'vp09.00.10.08.01.01.01.01.00'), nor is the size or color information updated. See: https://ews-build.s3-us-west-2.amazonaws.com/WPE-WK2-Tests-EWS/e871fc0b-4097-repeat-failures/results.html
Attachments
Jer Noble
Comment 1 2023-05-12 16:11:48 PDT
Also the new media/media-source/media-source-webm-configuration-vp9-header-color.html test is failing for similar reasons: See: https://ews-build.s3-us-west-2.amazonaws.com/WPE-WK2-Tests-EWS/af6d3eeb-9627-stress-mode/results.html TEST("content/test-vp9-profile0-stripped-manifest.json") EXPECTED (video.videoTracks[0].configuration.colorSpace.matrix == 'bt709'), OBSERVED 'unspecified' FAIL
Philippe Normand
Comment 2 2023-11-27 03:08:36 PST
EWS
Comment 3 2023-11-28 10:52:17 PST
Committed 271224@main (7734fe565b91): <https://commits.webkit.org/271224@main> Reviewed commits have been landed. Closing PR #20925 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2023-11-28 10:53:16 PST
Diego Pino
Comment 5 2023-11-30 09:20:23 PST
Debian Stable bot is failing after this patch. https://build.webkit.org/#/builders/46/builds/35196 ``` ./../../Source/WebCore/platform/graphics/gstreamer/AudioTrackPrivateGStreamer.cpp:119:32: error: ‘gst_codec_utils_caps_get_mime_codec’ was not declared in this scope; did you mean ‘gst_codec_utils_h265_get_level_idc’? 119 | GUniquePtr<char> mimeCodec(gst_codec_utils_caps_get_mime_codec(caps.get())); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ``` It seems this function is only available since GStreamer 1.20. Debian Stable bot builds with GStreamer 1.18.4, which is currently the minium required version.
Philippe Normand
Comment 6 2023-11-30 09:32:55 PST
Ah sorry about this. I can follow-up. Thanks for letting us know!
Diego Pino
Comment 7 2023-11-30 09:37:02 PST
EWS
Comment 8 2023-11-30 11:57:37 PST
Committed 271352@main (ef99c6c56bb0): <https://commits.webkit.org/271352@main> Reviewed commits have been landed. Closing PR #21110 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.